--- a/Find_Location_For_Tourist/package.json
+++ b/Find_Location_For_Tourist/package.json
@@ -23,12 +23,13 @@
     "@react-navigation/stack": "^6.0.0",
     "@rneui/themed": "^4.0.0-rc.8",
     "@supabase/supabase-js": "^2.46.1",
+    "@turf/turf": "^7.1.0",
     "axios": "^1.7.7",
     "expo": "~51.0.28",
     "expo-constants": "~16.0.2",
     "expo-dev-client": "~4.0.29",
     "expo-font": "~12.0.9",
-    "expo-image-picker": "^16.0.3",
+    "expo-linear-gradient": "^14.0.1",
     "expo-linking": "~6.3.1",
     "expo-location": "~17.0.1",
     "expo-router": "~3.5.23",
@@ -42,6 +43,7 @@
     "react-native-autocomplete-input": "^5.5.2",
     "react-native-dotenv": "^3.4.11",
     "react-native-gesture-handler": "~2.16.1",
+    "react-native-linear-gradient": "^2.8.3",
     "react-native-maps": "1.14.0",
     "react-native-modal-datetime-picker": "^18.0.0",
     "react-native-paper": "^5.12.5",
